<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:foreground="@drawable/custom_ripple"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailsActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivFoto"
        android:layout_width="130dp"
        android:layout_height="175dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:riv_border_color="@color/white"
        app:riv_border_width="2dp"
        app:riv_corner_radius="10dp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivBandera"
        android:layout_width="130dp"
        android:layout_height="175dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        app:riv_border_color="@color/white"
        app:riv_border_width="2dp"
        app:riv_corner_radius="10dp" />

    <TextView
        android:id="@+id/textFullName"
        android:layout_width="211dp"
        android:layout_height="37dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fullname"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textCasa"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/house"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/firstName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/firstName"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textApellido"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lastName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivBandera"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvFamilia"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/house"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lastName"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="TextSizeCheck" />

    <ProgressBar
        android:id="@+id/pbConexion"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminateDrawable="@drawable/progress_anim"
        android:indeterminateDuration="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

</androidx.constraintlayout.widget.ConstraintLayout>